--- a/trunk/admin/templates/top.htm
+++ b/trunk/admin/templates/top.htm
@@ -140,6 +140,7 @@ var adminId = "{$admin_id}";
       <li><a href="javascript:window.top.frames['main-frame'].document.location.reload();window.top.frames['header-frame'].document.location.reload()">{$lang.refresh}</a></li>
       <li><a href="#"  onclick="ShowToDoList()">{$lang.todolist}</a></li>
       <li style="border-left:none;"><a href="index.php?act=first" target="main-frame">{$lang.shop_guide}</a></li>
+	  <li><a href="course_signup.php?act=list" target="main-frame"><strong>{$lang.view_students}</strong></a></li>
     </ul>
     <div id="send_info" style="padding: 5px 10px 0 0; clear:right;text-align: right; color: #FF9900;width:40%;float: right;">
       <span id="send_msg"><img src="images/top_loader.gif" width="16" height="16" alt="{$lang.loading}" style="vertical-align: middle" /> {$lang.email_sending}</span>
