--- a/trunk/admin/templates/student_list.htm
+++ b/trunk/admin/templates/student_list.htm
@@ -44,7 +44,7 @@
 	<td align="center"><span>{$list.request_ip}</span></td>
 	<td align="center"><span>{$list.signup_date}</span></td>
 	<td align="center" nowrap="true"><span>
-      <a href="../course_signup.php?id={$list.id}" target="_blank" title="{$lang.view}"><img src="images/icon_view.gif" border="0" height="16" width="16" /></a>&nbsp;
+      <!--<a href="../course_signup.php?id={$list.id}" target="_blank" title="{$lang.view}"><img src="images/icon_view.gif" border="0" height="16" width="16" /></a>&nbsp; -->
       <a href="course_signup.php?act=edit&id={$list.id}" title="{$lang.edit}"><img src="images/icon_edit.gif" border="0" height="16" width="16" /></a>&nbsp;
     </td>
    </tr>
