--- a/index-image/index_header.css
+++ b/index-image/index_header.css
@@ -1,20 +1,14 @@
 
 .w980{width:980px; margin:5px auto 0px}
-.w680{width:680px; float:right}
-.w285{width:285px; float:left;}
-.h254{height:254px; overflow:hidden; margin:0px auto; border:0px #eee solid; padding:0px; background:#fff}
-
-.N_Flash{ width:680px; margin:0px auto; clear:both; overflow:hidden}
-.flashbox {MARGIN-BOTTOM: 10px; OVERFLOW: hidden; POSITION: relative; HEIGHT: 254px}
+.flashbox {MARGIN-BOTTOM: 10px; OVERFLOW: hidden; POSITION: relative; HEIGHT: 254px; }
 .flashbox .pic {BORDER-RIGHT: #FFB981 1px solid; PADDING-RIGHT: 1px; BORDER-TOP: #FFB981 1px solid; PADDING-LEFT: 1px; LEFT: 0px; PADDING-BOTTOM: 1px; BORDER-LEFT: #FFB981 1px solid; WIDTH: 410px; PADDING-TOP: 1px; BORDER-BOTTOM: #FFB981 1px solid; POSITION: absolute; TOP: 0px; HEIGHT: 250px}
-.flashbox UL {LEFT: 415px; WIDTH: 270px; POSITION: absolute; TOP: 0px}
+.flashbox UL {LEFT: 415px; WIDTH: 270px; POSITION: relative; TOP: 0px; border:5px solid #E00;}
 .flashbox LI {MARGIN-BOTTOM: 1px; OVERFLOW: hidden; LINE-HEIGHT: 24px; HEIGHT: 50px}
 .flashbox LI A {PADDING-RIGHT: 5px; DISPLAY: block; PADDING-LEFT: 5px; BACKGROUND: #e8e9ea; PADDING-BOTTOM: 0px; COLOR: #333; PADDING-TOP: 10px; POSITION: relative; HEIGHT: 40px}
 .flashbox LI.selected A {BACKGROUND: url(index_icon.gif) repeat-x; COLOR: #333; TEXT-DECORATION: none}
 .flashbox LI A:hover {BACKGROUND: url(index_icon.gif) repeat-x; COLOR: #333; TEXT-DECORATION: none}
 .flashbox LI STRONG {DISPLAY: block; OVERFLOW: hidden; CURSOR: pointer; LINE-HEIGHT: 18px; HEIGHT: 18px}
 .flashbox LI IMG {RIGHT: 7px; WIDTH: 74px; POSITION: absolute; TOP: 3px; HEIGHT: 44px}
-
 
 .course-menu-tab
 {
