--- a/trunk/themes/iastudy/style.css
+++ b/trunk/themes/iastudy/style.css
@@ -368,9 +368,16 @@ a:hover#catalog-list {
 	margin-top:12px;
 	margin-right:10px;
 }
+.title-03 .right{
+	float:right;
+	margin-top:5px;
+	margin-right:10px;
+}
+
 .title-03 .box {
 	margin-top:31px;
 }
+
 /*===========================================
         页面左边
  ===========================================*/
@@ -1122,6 +1129,7 @@ img.thumb {
 	color:#0328C1;
 	font-size:14px;
 }
+
 .name14 a {
 	color:#0328C1;
 	font-size:14px;
