--- a/index-image/ddblock-cycle-upright50.css
+++ b/index-image/ddblock-cycle-upright50.css
@@ -1,41 +1,41 @@
 DIV.ddblock-cycle-upright50 DIV#pager {
-	BORDER-RIGHT: #ccc 1px solid; PADDING-RIGHT: 2px; BORDER-TOP: #ccc 1px solid; PADDING-LEFT: 2px; FLOAT: left; PADDING-BOTTOM: 2px; MARGIN-LEFT: 6px; BORDER-LEFT: #ccc 1px solid; WIDTH: 182px; PADDING-TOP: 2px; BORDER-BOTTOM: #ccc 1px solid; HEIGHT: 300px
+	BORDER-RIGHT: #ccc 0px solid; PADDING-RIGHT: 2px; BORDER-TOP: #ccc 0px solid; PADDING-LEFT: 2px; FLOAT: left; PADDING-BOTTOM: 2px; MARGIN-LEFT: 6px; BORDER-LEFT: #ccc 0px solid; WIDTH: 200px; PADDING-TOP: 2px; BORDER-BOTTOM: #ccc 0px solid; HEIGHT: 250px; background-color:#FF0000;
 }
 .slider_border {
-	FLOAT: left; WIDTH: 620px
+	FLOAT: left; WIDTH: 410px; 
 }
 .container {
-	WIDTH: 819px
+	WIDTH: 650px;  
 }
 .slide-inner {
-	WIDTH: 620px
+	WIDTH: 410px; border-style: solid;  border-color: blue blue blue blue;
 }
 .custom-pager-inner {
-	FLOAT: left; WIDTH: 175px
+	FLOAT: left; WIDTH: 200px
 }
 #pager {
-	FLOAT: left; WIDTH: 175px
+	FLOAT: left; WIDTH: 200px
 }
 #ddblock-custom-pager-8 {
-	FLOAT: left; WIDTH: 175px
+	FLOAT: left; WIDTH: 200px
 }
 DIV.ddblock-cycle-upright50 DIV.slider {
-	FLOAT: left; WIDTH: 620px
+	FLOAT: left; WIDTH: 410px; 
 }
 DIV.ddblock-cycle-upright50 DIV.slider-inner {
-	BACKGROUND: url(../images/transparent_bg.png) 0px 0px; VISIBILITY: hidden; OVERFLOW: hidden; HEIGHT: 305px
+	BACKGROUND: url(header-image/transparent_bg.png) 0px 0px; VISIBILITY: hidden; OVERFLOW: hidden; HEIGHT: 255px
 }
 DIV.ddblock-cycle-upright50 DIV.slide {
 	DISPLAY: none; LEFT: 0px; TOP: 0px; HEIGHT: 100%
 }
 DIV.ddblock-cycle-upright50 DIV.slide-inner IMG {
-	BORDER-RIGHT: #000 1px solid; PADDING-RIGHT: 0px! important; BORDER-TOP: #000 1px solid; PADDING-LEFT: 0px! important; PADDING-BOTTOM: 0px! important; MARGIN: 0px; BORDER-LEFT: #000 1px solid; WIDTH: 620px; PADDING-TOP: 0px! important; BORDER-BOTTOM: #000 1px solid; HEIGHT: 305px
+	BORDER-RIGHT: #000 1px solid; PADDING-RIGHT: 0px! important; BORDER-TOP: #000 1px solid; PADDING-LEFT: 0px! important; PADDING-BOTTOM: 0px! important; MARGIN: 0px; BORDER-LEFT: #000 1px solid; WIDTH: 410px; PADDING-TOP: 0px! important; BORDER-BOTTOM: #000 1px solid; HEIGHT: 255px
 }
 DIV.ddblock-cycle-upright50 DIV.slide-text {
-	BACKGROUND: url(../images/transparent_bg.png) 0px 0px; POSITION: absolute
+	BACKGROUND: url(header-image/transparent_bg.png) 0px 0px; POSITION: absolute
 }
 DIV.ddblock-cycle-upright50 DIV.slide-text-horizontal {
-	LEFT: 0px; WIDTH: 620px; HEIGHT: 100px
+	LEFT: 0px; WIDTH: 410px; HEIGHT: 100px
 }
 DIV.ddblock-cycle-upright50 DIV.slide-text-top {
 	TOP: 7px
@@ -86,7 +86,7 @@ DIV.ddblock-cycle-upright50 DIV.slide-read-more P {
 	PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 0px
 }
 DIV.ddblock-cycle-upright50 DIV.slide-read-more A {
-	PADDING-RIGHT: 0px; PADDING-LEFT: 19px; FONT-SIZE: 14px; BACKGROUND: url(../images/readmore.png) no-repeat; PADDING-BOTTOM: 4px; MARGIN: 0px 10px 0px 0px; WIDTH: 100px; COLOR: #fff; BORDER-TOP-STYLE: none; BOTTOM: 5px; PADDING-TOP: 4px; FONT-FAMILY: times New Roman; BORDER-RIGHT-STYLE: none; BORDER-LEFT-STYLE: none; POSITION: absolute; TEXT-ALIGN: left; TEXT-DECORATION: none; BORDER-BOTTOM-STYLE: none
+	PADDING-RIGHT: 0px; PADDING-LEFT: 19px; FONT-SIZE: 14px; BACKGROUND: url(header-image/readmore.png) no-repeat; PADDING-BOTTOM: 4px; MARGIN: 0px 10px 0px 0px; WIDTH: 100px; COLOR: #fff; BORDER-TOP-STYLE: none; BOTTOM: 5px; PADDING-TOP: 4px; FONT-FAMILY: times New Roman; BORDER-RIGHT-STYLE: none; BORDER-LEFT-STYLE: none; POSITION: absolute; TEXT-ALIGN: left; TEXT-DECORATION: none; BORDER-BOTTOM-STYLE: none
 }
 DIV.ddblock-cycle-upright50 DIV.slide-read-more-horizontal A {
 	RIGHT: -17px
@@ -95,7 +95,7 @@ DIV.ddblock-cycle-upright50 DIV.slide-read-more-vertical A {
 	RIGHT: 5px
 }
 DIV.ddblock-cycle-upright50 DIV.slide-read-more A:hover {
-	BACKGROUND: url(../images/readmore-hover.png) no-repeat; TEXT-DECORATION: underline
+	BACKGROUND: url(header-image/readmore-hover.png) no-repeat; TEXT-DECORATION: underline
 }
 DIV.ddblock-cycle-upright50 DIV.slide-read-more-horizontal A:hover {
 	RIGHT: -17px
@@ -104,7 +104,7 @@ DIV.ddblock-cycle-upright50 DIV.slide-read-more-vertical A:hover {
 	RIGHT: 5px
 }
 DIV.ddblock-cycle-upright50 DIV.custom-pager {
-	WIDTH: 182px
+	WIDTH: 270px
 }
 DIV.ddblock-cycle-upright50 DIV.custom-pager-inner {
 	HEIGHT: 101px
@@ -116,10 +116,10 @@ DIV.ddblock-cycle-upright50 DIV.custom-pager .custom-pager-item-inner {
 	WIDTH: 182px
 }
 DIV.ddblock-cycle-upright50 DIV.custom-pager A {
-	DISPLAY: block; FONT-WEIGHT: bold; FONT-SIZE: 0.9em; FLOAT: left; BACKGROUND-IMAGE: url(../images/slide_back.gif); WIDTH: 182px; COLOR: #000; LINE-HEIGHT: 50px; FONT-FAMILY: Tahoma,Arial,sans-serif; HEIGHT: 60px; TEXT-ALIGN: left; TEXT-DECORATION: none; opacity: 0.7
+	DISPLAY: block; FONT-WEIGHT: bold; FONT-SIZE: 0.9em; FLOAT: left; BACKGROUND-IMAGE: url(header-image/slide_back.gif); WIDTH: 182px; COLOR: #000; LINE-HEIGHT: 50px; FONT-FAMILY: Tahoma,Arial,sans-serif; HEIGHT: 60px; TEXT-ALIGN: left; TEXT-DECORATION: none; opacity: 0.7
 }
 DIV.ddblock-cycle-upright50 DIV.custom-pager A.activeSlide {
-	BACKGROUND-IMAGE: url(../images/slide_hover.gif); COLOR: #fff; opacity: 1
+	BACKGROUND-IMAGE: url(header-image/slide_hover.gif); COLOR: #fff; opacity: 1
 }
 DIV.ddblock-cycle-upright50 DIV.custom-pager A:hover {
 	BACKGROUND: #fff; COLOR: #96f; opacity: 1
