--- a/trunk/admin/templates/top.htm
+++ b/trunk/admin/templates/top.htm
@@ -129,7 +129,7 @@ var adminId = "{$admin_id}";
 </head>
 <body>
 <div id="header-div">
-  <div id="logo-div"><img src="images/ecshop_logo.gif" alt="ECSHOP - power for e-commerce" /></div>
+  <div id="logo-div"><img src="images/ecshop_logo.gif" alt="我爱学习网" /></div>
   <div id="submenu-div">
     <ul>
       <li><a href="index.php?act=about_us" target="main-frame">{$lang.about}</a></li>
